--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,5 @@
-python-telegram-bot[all]==20.7
-aiohttp==3.9.1
+python-telegram-bot[job-queue]==21.3
+google-api-python-client==2.111.0
+google-auth==2.25.2
+google-auth-oauthlib==1.2.0
+google-auth-httplib2==0.2.0
